# mogussort

./: .gitignore  mogussort.py  pyproject.toml  readme.md
.github/workflows/: on tag deploy on PyPI.yaml  on tag release on Github.yaml  on-tag-create-release.yaml
mogussort/: mogussort.py
tests/: test_mogussort.py
