[tool.poetry]
authors     = ["9FS <pray4spam@googlemail.com>"]
description = ""
license     = "MIT"
name        = "mogussort"
readme      = "readme.md"
repository  = "https://github.com/9-FS/2023-04-10-Mogussort"
version     = "1.0.3"

[tool.poetry.dependencies]
python = "^3.11.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
