[tool.poetry]
authors     = ["9FS <pray4spam@googlemail.com>"]
description = ""
license     = "MIT"
name        = "mogussort"
readme      = "readme.md"
repository  = "https://github.com/9-FS/2023-04-10-mogussort"
version     = "1.0.4"

[tool.poetry.dependencies]
python = "^3.11.0"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.87.0"
kfslog     = "^1.0.0"
pytest     = "^7.4.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
